# ocr_lotr_home

./: .gitignore  LICENSE  README.md  build.yml  pyproject.toml
.github/workflows/: main.yml
src/: __main__.py
src/model/: model.py
src/services/: crew_list.py  csv_reader.py  csv_writer.py  directory.py  ocr.py
test/: ocr_test.py
